--- a/assin.html
+++ b/assin.html
@@ -9,26 +9,30 @@
 </head>
 
 <body>
-    <header>
+    <div class="body">
+    <header style="background-color: tomato;">
+        
         <div>
             <ul>
-                <li style="padding: 2px;"><a href="#"></a> Home</li>
-                <li style="padding: 2px;"> <a href="#"></a> Link1</li>
-                <li style="padding: 2px;"> <a href="#"></a> Link2</li>
-                <li style="padding: 2px;"> <a href="#"></a> Link3</li>
+            <li style="padding-right: 2px;"><a href="#"></a> Home</li>
+            <li style="padding-right: 2px;"> <a href="#"></a> Link1</li>
+            <li style="padding-right: 2px;"> <a href="#"></a> Link2</li>
+            <li style="padding-right: 2px;"> <a href="#"></a> Link3</li>
             </ul>
         </div>
 
     </header>
     <h1>START PAGE</h1>
-    <p style="text-align: center;">
+    <p style="text-align: center;" >
         Template by w3.css
     </p>
     <h5>GET STARTED</h5>
-    <pre> LOREM IPSUM
+</div>
+                         <pre>                  <h3> LOREM IPSUM</h3>
+
                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur accus  
                    repellat. Eius quia sapiente dignissimos natus consectetur, magni tenetu
-                   <img class="cas" src="img..png" alt="">
+                   <img class="cas" src="1.png" alt="">
                     amus, inr quaer atur ma esse ua  oluptat ed natu
                    accusantium voluptatibus sunt repudiandae ea itaque mollitia vel. Conseq
                    perspiciatis numquam ratione consequuntur commodi quaerat laborum molliti 
@@ -36,12 +40,12 @@
                    repudiandae possimus nemo. Eos laudantium commodi fuga totam eaque quis s
                    laboriosam aspernatur</pre>
     <pre style="background-color: lightgray;">
-                            LOREM IPSUM
+        <h3> LOREM IPSUM</h3>
 
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime esse nam  
                             ipsa quaerat pariatur eaque corporis, magni facere labore recusandaassum 
          
-                            <img class="tea" src="tea.png" alt="">
+    <img class="tea" src="cup.png" alt="">
                              Eligendi iste, voluptate impedit nullconsequuntur, optio possimus e
                              Beataperferendis repellendus vitae, accusantium id corporis quibusd 
                              doloremque similique atque. Error vellaborum nobis eveniet tempora 
@@ -53,6 +57,7 @@
     </h6>
 
 
+    <img class="icon" src="icon1.png" alt="">
 </body>
 
 </html>
