--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ font-size: large;} */
             <input class="button" type="submit">
         </form>
     </div>
+  <a href="./Lecture/lec03.html">Schedule Table</a>
 </body>
+
 
 </html>
