--- a/Lecture/lec03.html
+++ b/Lecture/lec03.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        .tab{
-           background-color: deepskyblue;
-           width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="../style.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
 </head>
 <body>
+    <a href="../index.html">Click To go back</a>
     <table class="tab" border="4px solid black" cellpadding="10px" cellspacing="5px" >
         <tr>
             <th>Day/Period</th>
