--- a/Lecture/lec04.html
+++ b/Lecture/lec04.html
@@ -2,18 +2,16 @@
 <html lang="en">
 
 <head>
-    <style>
-        .tab {
-            width: 100%;
-            background-color:deepskyblue;
-        }
-    </style>
+   <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
 </head>
 
 <body>
+    <a href="../index.html" class="gap"> Click to go back to main page</a>
+
+    
     <table class="tab" border="4px solid black" cellpadding="15px" cellspacing="10px">
         <head>
             <tr>
