--- a/index copy.html
+++ b/index copy.html
@@ -66,6 +66,7 @@ font-size: large;} */
     </div>
   <a href="./Lecture/lec03.html">Schedule Table</a>
   <a href="./Lecture/lec04.html">Schedule Table</a>
+  <a href="https://google.com">Click to visit the site</a>
 </body>
 
 
