--- a/travel.html
+++ b/travel.html
@@ -3,26 +3,32 @@
 
 <head>
     <style>
-        html,
-        body {
+        /* body {
             height: 100%;
             width: 100%;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-        }
-
+        } */
+.tab{
+background-color: gray;
+margin: 20px;
+height: 200px;
+width: 25%;
+}
         .head {
             background-color: darkgray;
         }
-h2{
-    text-align: center;
-    color: black;
-    padding-top: 300px;
-    font-size: 25px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
+
+        h2 {
+            text-align: center;
+            color: black;
+            padding-top: 300px;
+            font-size: 25px;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+        }
+
         .cont {
             color: white;
             display: flex;
@@ -80,7 +86,8 @@ h2{
             padding-right: 250px;
             padding-bottom: 100px;
         }
-        .ghi{
+
+        .ghi {
             width: 18%;
             height: 50px;
             border: 1px black style="font-size:20px;";
@@ -119,24 +126,36 @@ h2{
             nulla suscipit nihil, culpa placeat aperiam magni reprehenderit accusantium laudantium tempora. Accusantium
             hic in alias facilisLorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nesciunt eos, eum maiores
             rerum, in alias facilis.</p>
-            <div class="cont" style="background-color: white; color: black;">
-        <div class="ghi" >
-            <h4 style="font-size:20px;">Best Price Guarantee
-            </h4>
-            <p>SpaceTeam bootstraping user centered design sticky notes convergence fund </p>
+        <div class="cont" style="background-color: white; color: black;">
+            <div class="ghi">
+                <h4 style="font-size:20px;">Best Price Guarantee
+                </h4>
+                <p>SpaceTeam bootstraping user centered design sticky notes convergence fund </p>
+            </div>
+            <div class="ghi">
+                <h4 style="font-size:20px;">Best Travel Agency</h4>
+                <p>User story steve jobs stev jobs irritate human centered design iritate pair progra ming 360capmaign.
+                </p>
+            </div>
+            <div class="ghi">
+                <h4 style="font-size:20px;">Trust & Safety</h4>
+                <p>Thoughts leader cortado viral viral earned media long shadow actionable insight.</p>
+            </div>
         </div>
-        <div class="ghi">
-            <h4 style="font-size:20px;">Best Travel Agency</h4>
-            <p>User story steve jobs stev jobs irritate human centered design iritate pair progra ming 360capmaign.</p>
-        </div>
-        <div class="ghi">
-            <h4 style="font-size:20px;">Trust & Safety</h4>
-            <p>Thoughts leader cortado viral viral earned media long shadow actionable insight.</p>
-        </div>
-    </div>
 
-<h2>Find Your Destination</h2>
-<p style="font-size: small;">Most Popular Places Are Waiting For You</p>
+        <h2>Find Your Destination</h2>
+        <p style="font-size: small;">Most Popular Places Are Waiting For You</p>
+        <input type="text" placeholder="Search...">
+        <table width="100%" align="center" cellpadding="20px">
+            <tr>
+
+                <td class="tab">Malaysia</td>
+
+                <td class="tab">Malaysia</td>
+
+                <td class="tab">Malaysia</td>
+            </tr>
+        </table>
 </body>
 
 </html>
